# rx

./: .gitignore  README.md  pyproject.toml
src/pharma_pivot/: main.py
src/pharma_pivot/core/: normalizer.py
src/pharma_pivot/models/: schemas.py
src/pharma_pivot/scrapers/: __init__.py  aus_tga.py  base.py  uk_emc.py  uk_mhra.py  usa_fda.py
src/pharma_pivot/web/templates/: index.html
src/pharma_pivot/web/templates/partials/: results_table.html
tests/: test_scrapers.py
